tests/ui/methods/method-call-lifetime-args-fail.stderr
error[E0107]: method takes 2 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/method-call-lifetime-args-fail.rs:16:7
   |
LL |     S.early::<'static>();
   |       ^^^^^   ------- supplied 1 lifetime argument
   |       |
   |       expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:6:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --
help: add missing lifetime argument
   |
LL |     S.early::<'static, 'static>();
   |                      +++++++++

error[E0107]: method takes 2 lifetime arguments but 3 lifetime arguments were supplied
  --> $DIR/method-call-lifetime-args-fail.rs:18:7
   |
LL |     S.early::<'static, 'static, 'static>();
   |       ^^^^^                   --------- help: remove the lifetime argument
   |       |
   |       expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:6:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:27:15
   |
LL |     S::late::<'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:4:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:29:15
   |
LL |     S::late::<'static, 'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:4:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:31:15
   |
LL |     S::late::<'static, 'static, 'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:4:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:34:21
   |
LL |     S::late_early::<'static, 'static>(S, &0);
   |                     ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:7:19
   |
LL |     fn late_early<'a, 'b>(self, _: &'a u8) -> &'b u8 { loop {} }
   |                   ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:36:21
   |
LL |     S::late_early::<'static, 'static, 'static>(S, &0);
   |                     ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:7:19
   |
LL |     fn late_early<'a, 'b>(self, _: &'a u8) -> &'b u8 { loop {} }
   |                   ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:40:24
   |
LL |     S::late_implicit::<'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:5:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:42:24
   |
LL |     S::late_implicit::<'static, 'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:5:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:44:24
   |
LL |     S::late_implicit::<'static, 'static, 'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:5:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:47:30
   |
LL |     S::late_implicit_early::<'static, 'static>(S, &0);
   |                              ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:8:41
   |
LL |     fn late_implicit_early<'b>(self, _: &u8) -> &'b u8 { loop {} }
   |                                         ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:49:30
   |
LL |     S::late_implicit_early::<'static, 'static, 'static>(S, &0);
   |                              ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:8:41
   |
LL |     fn late_implicit_early<'b>(self, _: &u8) -> &'b u8 { loop {} }
   |                                         ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:52:35
   |
LL |     S::late_implicit_self_early::<'static, 'static>(&S);
   |                                   ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:9:37
   |
LL |     fn late_implicit_self_early<'b>(&self) -> &'b u8 { loop {} }
   |                                     ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:54:35
   |
LL |     S::late_implicit_self_early::<'static, 'static, 'static>(&S);
   |                                   ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:9:37
   |
LL |     fn late_implicit_self_early<'b>(&self) -> &'b u8 { loop {} }
   |                                     ^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:57:28
   |
LL |     S::late_unused_early::<'static, 'static>(S);
   |                            ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:10:26
   |
LL |     fn late_unused_early<'a, 'b>(self) -> &'b u8 { loop {} }
   |                          ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:59:28
   |
LL |     S::late_unused_early::<'static, 'static, 'static>(S);
   |                            ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:10:26
   |
LL |     fn late_unused_early<'a, 'b>(self) -> &'b u8 { loop {} }
   |                          ^^

error[E0107]: method takes 2 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/method-call-lifetime-args-fail.rs:63:8
   |
LL |     S::early::<'static>(S);
   |        ^^^^^   ------- supplied 1 lifetime argument
   |        |
   |        expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:6:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --
help: add missing lifetime argument
   |
LL |     S::early::<'static, 'static>(S);
   |                       +++++++++

error[E0107]: method takes 2 lifetime arguments but 3 lifetime arguments were supplied
  --> $DIR/method-call-lifetime-args-fail.rs:65:8
   |
LL |     S::early::<'static, 'static, 'static>(S);
   |        ^^^^^                   --------- help: remove the lifetime argument
   |        |
   |        expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:6:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0107, E0794.
For more information about an error, try `rustc --explain E0107`.
